# dataset-creator

./: .gitignore  README.md  pyproject.toml
libs/: simpleaudio_patched-1.0.5-cp313-cp313-win_amd64.whl
src/: DEPRECATED generate_list.py  audio_processor.py  check_lengths.py  editor.py  exporter.py  generate_list.py  huggingface_format.py  main.py  manual_sort.py  session.py  settings.py  test.py  utils.py
src/processing/: audio_processor.py
