[project]
name = "koequet"
version = "0.1.0"
description = "The worst dataset formatter in the history of EVER."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audio-separator[gpu]>=0.40.0",
    "datasets>=4.4.2",
    "keyboard>=0.13.5",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "pandas-audio-methods>=0.0.1",
    "pydub-ng>=0.2.0",
    "simpleaudio-patched>=1.0.5",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.9",
]
